force-app/main/default/objects/tkt_Ticket_Comment__c/tkt_Ticket_Comment__c.object-meta.xml
<CustomObject>
    <description>TNOX: Comment thread entry on a support ticket. Supports internal-only comments hidden from the ticket submitter. Triggers email notifications to the ticket owner or assignee.</description>
    <label>Ticket Comment</label>
    <nameField>
        <displayFormat>CMT-{00000}</displayFormat>
        <label>Comment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>