force-app/main/default/objects/tkt_Ticket_Comment__c/fields/Comment_Body__c.field-meta.xml
<CustomField>
    <fullName>Comment_Body__c</fullName>
    <description>TNOX: The content of the comment. Supports rich text formatting including bold, italic, lists, and links.</description>
    <label>Comment Body</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>