force-app/main/default/objects/tkt_Ticket_Comment__c/fields/Is_Internal__c.field-meta.xml
<CustomField>
    <fullName>Is_Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TNOX: When checked, this comment is only visible to support agents and admins. Hidden from the ticket submitter in the My Tickets view.</description>
    <label>Is Internal</label>
    <type>Checkbox</type>
</CustomField>