force-app/main/default/objects/tkt_Ticket_Comment__c/fields/Legacy_Comment_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Comment_Id__c</fullName>
    <description>TNOX: Stores the original Salesforce ID from pre-migration system. Used for data migration tracking.</description>
    <externalId>true</externalId>
    <label>Legacy Comment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>