force-app/main/default/objects/tkt_Ticket_Comment__c/fields/Posted_By__c.field-meta.xml
<CustomField>
    <fullName>Posted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TNOX: The user who authored this comment. Auto-populated on creation and cannot be changed.</description>
    <label>Posted By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Ticket Comments</relationshipLabel>
    <relationshipName>tkt_Ticket_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>