force-app/main/default/objects/tkt_Ticket_Comment__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <description>TNOX: The parent ticket this comment belongs to. Master-Detail relationship — deleting the ticket deletes all comments.</description>
    <label>Ticket</label>
    <referenceTo>tkt_Ticket__c</referenceTo>
    <relationshipLabel>Ticket Comments</relationshipLabel>
    <relationshipName>Ticket_Comments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>